# rgd

./: Cargo.toml  README.md
contrib/: config.example.toml  rgd.service
contrib/rgctl/: rgctl
scripts/: falls-apart.sh
src/: config.rs  lib.rs  main.rs
src/cgroup/: mod.rs  pressure.rs  procs.rs  tree.rs  unit.rs  xattr.rs
src/enforce/: cgroupfs.rs  mod.rs  systemd.rs
src/policy/: attributor.rs  ladder.rs  mod.rs  state.rs
src/protect/: audio.rs  dbus.rs  mod.rs  wayland.rs
src/psi/: mod.rs  parser.rs  trigger.rs
vm-demo/: 00-bootstrap.sh  01-baseline.sh  02-dryrun.sh  03-enforce.sh  04-panic.sh  README.md  demo-config.toml  lib.sh
